--- a/index.html
+++ b/index.html
@@ -624,6 +624,18 @@ layer.on('click', function () {
 
 loadMap(); // ✅ called after it's defined
 
+  function triggerCorrectDissolveAnimation(layer) {
+  const path = layer._path;
+  if (!path) return;
+
+  path.classList.add('correct-dissolve');
+
+  setTimeout(() => {
+    path.classList.remove('correct-dissolve');
+    path.classList.add('correct-final');
+  }, 400);
+}
+
 // ✅ Submit handler defined OUTSIDE of loadMap
 document.getElementById('submit-guess').onclick = async function () {
   if (!currentRoad) return;
