--- a/index.html
+++ b/index.html
@@ -156,14 +156,14 @@
     }
     /* Dissolve animation for correct road */
 .correct-dissolve {
-  transition: opacity 1.9s ease-out;
+  transition: opacity 2000ms ease-out;
   opacity: 0;
 }
 
 .correct-final {
-  transition: opacity 1.9s ease-in;
+  transition: opacity 2000ms ease-in;
   stroke: rgba(0, 255, 0, 0.4); /* translucent green */
-  opacity: 0.4;
+  opacity: 0.6;
   pointer-events: none;
 }
 
