--- a/index.html
+++ b/index.html
@@ -515,8 +515,12 @@ async function loadMap() {
   layer.setStyle({ color: 'orange', weight: 6 });
       layer._originalColor = 'orange';
 } else if (state.correct) {
-  layer.setStyle({ color: 'gray', weight: 6 });
-      layer._originalColor = 'gray';
+  const path = layer._path;
+  if (path) {
+    path.style.opacity = '';
+    path.classList.add('correct-final'); // green transparent, no animation
+  }
+  layer._originalColor = 'greenish';
 } else {
   layer.setStyle({ color: 'red', weight: 6 });
       layer._originalColor = 'red';
