--- a/index.html
+++ b/index.html
@@ -515,12 +515,18 @@ async function loadMap() {
   layer.setStyle({ color: 'orange', weight: 6 });
       layer._originalColor = 'orange';
 } else if (state.correct) {
-  const path = layer._path;
-  if (path) {
-    path.style.opacity = '';
-    path.classList.add('correct-final'); // green transparent, no animation
-  }
+  layer.setStyle({ weight: 6 }); // omit color entirely — we’ll handle via CSS
+
+  layer.once('add', () => {
+    const path = layer._path;
+    if (path) {
+      path.style.opacity = '';
+      path.classList.add('correct-final');
+    }
+  });
+
   layer._originalColor = 'greenish';
+}
 } else {
   layer.setStyle({ color: 'red', weight: 6 });
       layer._originalColor = 'red';
