--- a/index.html
+++ b/index.html
@@ -515,9 +515,9 @@ async function loadMap() {
   layer.setStyle({ color: 'orange', weight: 6 });
       layer._originalColor = 'orange';
 } else if (state.correct) {
-  layer.setStyle({ weight: 6 }); // omit color entirely — we’ll handle via CSS
+  layer.setStyle({ weight: 6 }); // Avoid setting color directly
 
-  layer.once('add', () => {
+  layer.on('add', function () {
     const path = layer._path;
     if (path) {
       path.style.opacity = '';
