--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
   <div class="legend-item"><div class="legend-color" style="background: black;"></div>Unguessed</div>
   <div class="legend-item"><div class="legend-color" style="background: red;"></div>Incorrect</div>
   <div class="legend-item"><div class="legend-color" style="background: orange;"></div>Hint Used</div>
-  <div class="legend-color" style="background: rgba(0, 255, 0, 0.4); border: 1px solid #666;"></div>Correct
+  <div class="legend-color" style="background-color: rgba(0, 255, 0, 0.4); border: 1px solid #666;"></div>Correct
   <div class="legend-item"><div class="legend-color" style="background: yellow;"></div>Suffix Warning</div>
   <div class="legend-item"><div class="legend-color" style="background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet); border: none;"></div>Ultra-Hard Mode</div>
 </div>
