--- a/index.html
+++ b/index.html
@@ -33,17 +33,15 @@
   margin: 2px 0;
 }
 
-
 .legend-color {
   width: 14px;
   height: 14px;
   border-radius: 3px;
   margin-right: 8px;
   border: 1px solid #666;
-  display: inline-block; /* ✅ force layout consistency */
-  vertical-align: middle; /* ✅ aligns with text */
+  display: inline-block;
+  vertical-align: middle; /* ✅ ensures box aligns to text */
 }
-
 
     #auth-box {
   position: absolute;
