--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
   <div class="legend-item"><div class="legend-color" style="background: black;"></div>Unguessed</div>
   <div class="legend-item"><div class="legend-color" style="background: red;"></div>Incorrect</div>
   <div class="legend-item"><div class="legend-color" style="background: orange;"></div>Hint Used</div>
-  <div class="legend-color" style="background-color: rgba(0, 100, 0, 0.4); margin-right: 15px;"></div>Correct
+  <div class="legend-color" style="background-color: #008000; margin-right: 15px;"></div>Correct
   <div class="legend-item"><div class="legend-color" style="background: yellow;"></div>Suffix Warning</div>
   <div class="legend-item"><div class="legend-color" style="background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet); border: none;"></div>Ultra-Hard Mode</div>
 </div>
