--- a/index.html
+++ b/index.html
@@ -169,6 +169,12 @@
   opacity: 0.7;
   pointer-events: none;
 }
+    .hint-used-final {
+  stroke: rgba(255, 165, 0, 0.4); /* soft translucent orange */
+  opacity: 0.7;
+  pointer-events: none;
+}
+
 
   </style>
 </head>
@@ -515,9 +521,19 @@ async function loadMap() {
  if (segmentStateMap.has(id)) {
   const state = segmentStateMap.get(id);
 
-  if (state.used_hint) {
-    layer.setStyle({ color: 'orange', weight: 6 });
-    layer._originalColor = 'orange';
+ if (state.used_hint) {
+  layer.setStyle({ weight: 6 }); // Skip color, use CSS class
+
+  setTimeout(() => {
+    if (layer._path) {
+      layer._path.style.opacity = '';
+      layer._path.classList.add('hint-used-final');
+    }
+  }, 0);
+
+  layer._originalColor = 'orangeish';
+}
+
 
   } else if (state.correct) {
     layer.setStyle({ weight: 6 }); // Don't set color directly
