--- a/index.html
+++ b/index.html
@@ -651,7 +651,34 @@ layer.on('click', function () {
 }
                  }).addTo(map); // ✅ end of geoJSON block
       }); // ✅ closes .then(data => { ... })
+  }); // ✅ closes .then(data => { ... })
+
+fetch('Boundaries_County_Lancaster_PA.geojson')
+  .then(res => res.json())
+  .then(data => {
+    const countyLayer = L.geoJSON(data, {
+      style: {
+        color: '#0080ff',
+        weight: 3,
+        fillColor: '#cce6ff',
+        fillOpacity: 0.3
+      },
+      onEachFeature: function (feature, layer) {
+        layer.bindTooltip("Lancaster County", {
+          permanent: false,
+          direction: "center",
+          className: "county-tooltip"
+        });
+
+        layer.on('click', function () {
+          map.fitBounds(layer.getBounds());
+        });
+      }
+    }).addTo(map);
+  });
+
 } // ✅ closes loadMap()
+
 
 loadMap(); // ✅ called after it's defined
 
