--- a/index.html
+++ b/index.html
@@ -661,6 +661,7 @@ fetch('Boundaries_County_Lancaster_PA.geojson')
         weight: 3,
         fillColor: '#cce6ff',
         fillOpacity: 0.3
+        pane: 'overlayPane'
       },
       onEachFeature: function (feature, layer) {
         layer.bindTooltip("Lancaster County", {
