--- a/index.html
+++ b/index.html
@@ -669,30 +669,21 @@ fetch('Boundaries_County_Lancaster_PA.geojson')
           className: "county-tooltip"
         });
 
-     layer.on('click', function (e) {
-  map.fitBounds(layer.getBounds());
+        layer.on('click', function () {
+          map.fitBounds(layer.getBounds());
 
-  // 🧹 Auto-unselect polygon after 0.5s to prevent black highlight box
-  setTimeout(() => {
-    map.closePopup(); // Just in case
-
-    // Reset this layer's style
-    layer.setStyle({
-      fillOpacity: 0.3 // or whatever your original fillOpacity is
-    });
-
-    // Remove map focus by simulating a click just outside the polygon
-    const offset = 0.0005;
-    const lat = e.latlng.lat + offset;
-    const lng = e.latlng.lng + offset;
-    map.fire('click', { latlng: L.latLng(lat, lng) });
-  }, 500);
-});
-
+          // Auto-unfocus after 0.5s to remove highlight
+          setTimeout(() => {
+            map.fire('click');
+          }, 500);
         });
+      }
     }).addTo(map); // ✅ This was missing
   });
+
+
 } // ✅ closes loadMap()
+
 
 loadMap(); // ✅ called after it's defined
 
