--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@ const suffixMap = {
 
 let preLoginGuesses = [];
 let nameToLayers = {};
+let outsideMaskLayer = null;
 let insideLancaster = false;
 let guessedSegmentIds = new Set();
 let attemptCounts = {};  // Track attempts per segment ID
