--- a/index.html
+++ b/index.html
@@ -512,16 +512,7 @@ async function loadMap() {
   fetch('Roads_ManheimTownship_Lancaster_PA.geojson')
     .then(res => res.json())
     .then(data => {
-    L.geoJSON(data, {
-  style: {
-    fillColor: 'gray',
-    fillOpacity: 0.5,
-    color: null,
-    weight: 0
-  },
-  interactive: false
-}).addTo(map);
-
+      L.geoJSON(data, {
        onEachFeature: function (feature, layer) {
   const id = String(feature.id);
   const name = feature.properties.name || "";
@@ -675,8 +666,7 @@ fetch('Boundaries_County_Lancaster_PA.geojson')
         fillOpacity: 0.3
       },
       onEachFeature: function (feature, layer) {
-        const countyName = feature.properties.name || "County";
- layer.bindTooltip(countyName, {
+        layer.bindTooltip("Lancaster County", {
           permanent: false,
           direction: "center",
           className: "county-tooltip"
@@ -735,6 +725,7 @@ function applyOutsideGrayMask(countyGeoJSON) {
   const outer = [
     [[-90, -180], [-90, 180], [90, 180], [90, -180], [-90, -180]]
   ];
+  const inner = countyGeoJSON.features[0].geometry.coordinates;
 
   // Flatten nested geometry for the inner hole
   const geometry = countyGeoJSON.features[0].geometry;
